crear menu para internet explorer

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ $(function(){
 	<ul><!-- Inicia id de menuOpciones -->
 		<li>inicio <span class="flechaabajo"></span>
 			<ul>
-				<li onClick="filtro('Somos')">¿quienes somos?</li>
+				<li onClick="filtro('somos')">¿quienes somos?</li>
 			</ul>
 		</li>
 		<li>empresa<span class="flechaabajo"></span>
